# gdswapmod

./: .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
